src/scss/components/_results.scss
.results {
  margin: 1.875rem 5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;

  h4 {
    font-size: 1.5rem;
    font-weight: 700;
    margin-bottom: 1.5rem;
  }

  &__grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-column-gap: 2rem;
    grid-row-gap: 2rem;

    @media only screen and (max-width: 1400px) {
      grid-template-columns: repeat(3, 1fr);
    }

    @media only screen and (max-width: 1200px) {
      grid-template-columns: repeat(2, 1fr);
      margin: 1.875rem 0 3.125rem 0;
    }

    @media only screen and (max-width: 568px) {
      grid-template-columns: repeat(1, 1fr);
      margin: 1.875rem 1.5rem 1.875rem 1.875rem;
    }
  }

  @media only screen and (max-width: 600px) {
    margin: 2rem 2.5rem 2rem 3.125rem;
  }

  @media only screen and (max-width: 400px) {
    margin: 2.5rem 1.25rem 2.5rem 2.5rem;
  }
}

